fixing spacing on about me page

--- a/public/css/about-me.css
+++ b/public/css/about-me.css
@@ -1,6 +1,6 @@
 #about-me {
-    margin-top: 6%;
-    margin-bottom: 6%;
+    margin-top: 8%;
+    margin-bottom: 12%;
 }
 
 #about-me-box {
